<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:passwordToggleEnabled="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wm_purpler_midium"
    tools:context=".ui.auth.AuthActivity">

    <ImageView
        android:id="@+id/logoupcast"
        android:layout_width="420dp"
        android:layout_height="375dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_upcast" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/accountTextField"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoupcast">

        <EditText
            android:id="@+id/account"
            android:layout_width="275dp"
            android:layout_height="48dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/customerid_hint"
            android:inputType="textCapCharacters"
            android:maxLength="9"
            android:paddingStart="8dp"
            android:paddingTop="0dp"
            android:paddingEnd="10dp"
            android:paddingBottom="0dp"
            android:singleLine="true"
            android:textColor="@color/wm_purpler_midium"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountTextField">

        <EditText
            android:id="@+id/password"
            android:layout_width="275dp"
            android:layout_height="48dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="10dp"
            android:maxLength="10"
            android:drawablePadding="5dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_lock"
            android:imeOptions="actionDone"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/wm_purpler_midium"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:text="@string/login_text"
        app:backgroundTint="@color/wm_pink_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />


</androidx.constraintlayout.widget.ConstraintLayout>